Ensure that compiler module exports graphio package